# wallpapers

./: .gitignore  LICENSE  README.md  change-wallpapers.sh  himawari.sh  pyproject.toml
